Cambios Para entorno de producción

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,7 +4,7 @@ DB_PASS=1q2w3e4r
 DB_HOST=localhost
 DB_PORT=5432
 DB_DIALECT=postgres
-
+DATABASE_URL = postgresql://postgres:[Rayo23646DB]@db.nzdiyfpavxurxsxmlvrx.supabase.co:5432/postgres
 //Si es 1 aplicamos los cambios en las tablas con respecto al RLS.
 APPLY_RLS = 0
 
@@ -20,8 +20,8 @@ PORT=3000
 NODE_ENV=development
 
 # Configuración de JWT
-JWT_SECRET=tu_clave_secreta_muy_segura_aqui
-SECRET_KEY=tu_clave_secreta_muy_segura_aqui
+JWT_SECRET=jVWqikz6MEkDE3plx7T7Z8kWsH5RLoHjIWwFFSnuqOwllPoNnc
+SECRET_KEY=jVWqikz6MEkDE3plx7T7Z8kWsH5RLoHjIWwFFSnuqOwllPoNnc
 
 # Configuración de CORS (opcional)
 CORS_ORIGIN=http://localhost:3001 
